# trashbin-plus

./: .gitignore  README.md  build.ts  manifest.json  package.json  translate.py  tsconfig.json
.github/workflows/: release-ai-assets.yml
ai-converter/: convert_ast_to_onnx.py  convert_sonics_to_onnx.py  convert_to_onnx.py  pyproject.toml
assets/legacy/: trashbin.js
src/: app.tsx  global.css  settings.json
src/components/: icons.tsx
src/components/features/: ai-detection-widget.tsx  ai-probability-indicator.tsx  playlist-cleanup-context-menu.tsx  (+2 more)
src/hooks/: use-ai-detection.ts  use-ai-indicator-injection.ts  use-auto-add-recommendations.tsx  use-hotkey-detection.ts  use-hotkey-trash.ts  use-playlist-monitor.ts  use-recommendation-monitor.ts  use-remote-toggle.ts  use-trash-button-injection.ts  use-trash-button-injection.tsx
src/i18n/: af.json  am.json  ar-EG.json  ar-MA.json  ar-SA.json  ar.json  az.json  bg.json  bho.json  bn.json  bs.json  ca.json  cs.json  da.json  de.json  el.json  en-GB.json  en.json  es-419.json  es-AR.json  es-MX.json  es.json  et.json  eu.json  fa.json  fi.json  fil.json  fr-CA.json  fr.json  gl.json  gu.json  he.json  hi.json  hr.json  hu.json  id.json  is.json  it.json  ja.json  kn.json  (+34 more)
src/lib/: ai-asset-manager.ts  ai-audio-fetcher.ts  ai-blocklist.ts  ai-classifier.ts  ai-engine.ts  ai-fakeprint.ts  ai-fft.ts  ai-infer-engine.ts  ai-model-config.ts  ai-track-handler.ts  constants.ts  metadata-utils.ts  playlist-monitor.ts  playlist-utils.ts  playlist-utils.tsx  track-utils.ts
src/store/: ai-store.ts  trashbin-store.ts
(+12 files in other folders)
